deploy/base/federation-rest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: federation-rest
  namespace: dh-health
  labels:
    app: federation-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: federation-rest
  template:
    metadata:
      labels:
        app: federation-rest
    spec:
      containers:
        - name: federation-rest
          image: docker-health/federation-rest:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: logs
              mountPath: /code/logs/federation-rest
              subPath: federation
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: log-pvc
