deploy/base/federation-rest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: federation-rest
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: federation-rest
